# delta-encoding

./: .gitignore  CMakeLists.txt  README.md  main.cpp  test.txt  test2.txt
src/: child.cpp  child.h  decompress.cpp  decompress.h  dic.cpp  dic.h  index.cpp  index.h  int64toString.cpp  int64toString.h  parent.cpp  parent.h  vecChar8toInt64.cpp  vecChar8toInt64.h
